fix: disable iphone unexpected horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-html {
+html, body {
     scroll-behavior: smooth;
+    max-width: 100% !important;
+    overflow-x: hidden !important;
 }
 
 body {
